--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SA Eye Specialists Portal - V4.8</title>
+    <title>SA Eye Specialists Portal - V4.9</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -104,6 +104,16 @@
             background-color: #f1f3f5; 
             /* We already added position: sticky in the previous step, so that applies here */
         }
+
+        /* 4. Sticky Table Footer (Totals) */
+        tfoot td {
+            position: sticky;
+            bottom: 0;
+            z-index: 100; /* Keeps it on top of the scrolling data */
+            background-color: #e7f3ff; /* Matches your existing total row color */
+            border-top: 2px solid #0056b3; /* Adds a nice blue line to separate it */
+            box-shadow: 0 -2px 4px rgba(0,0,0,0.1); /* Adds a shadow pointing up */
+        }
         
         @keyframes shimmer {
             0% { background-position: 200% 0; }
@@ -123,7 +133,7 @@
         <input type="email" id="email" class="login-input" placeholder="Email">
         <input type="password" id="password" class="login-input" placeholder="Password">
         <button class="btn btn-primary" style="width:100%; margin-top:15px; padding:15px;" id="loginBtn">Sign In</button>
-        <p style="font-size: 10px; color: #ccc; margin-top: 20px;">Build V4.8</p>
+        <p style="font-size: 10px; color: #ccc; margin-top: 20px;">Build V4.9</p>
     </div>
 
     <div id="appSection" class="hidden">
@@ -270,7 +280,7 @@
         </div>
         
         <div class="version-display">
-            <span>Build Version: 4.8</span>
+            <span>Build Version: 4.9</span>
             <span id="dbStatus">System Status: Ready</span>
         </div>
     </div>
