--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <script src="lib/pivot.min.js"></script>
     <script src="lib/tips_data.min.js"></script>
 
-    <script src="lib/firebase-app.js"></script>
-    <script src="lib/firebase-auth.js"></script>
-    <script src="lib/firebase-firestore.js"></script>
+    <script src="lib/firebase-app-compat.js"></script>
+    <script src="lib/firebase-auth-compat.js"></script>
+    <script src="lib/firebase-firestore-compat.js"></script>
 
     <script src="lib/xlsx.full.min.js"></script>
     <script src="lib/chart.umd.min.js"></script>
